# pyflubl

./: .gitignore  TODO.md  pyproject.toml
src/fluka/4-5.0/src/: Makefile  (+1 more)
src/pyflubl/: Builder.py  BuilderNew.py  Coordinates.py  Element.py  GeometryGeant4.py  Line.py  Options.py  Utilities.py  __init__.py
src/pyflubl/Analysis/: _PyflublDataFile.py  __init__.py  _plot.py  _plotgeom.py
src/pyflubl/Fluka/: _BaseCard.py  __init__.py  _beam.py  _lattice.py  _plotgeom.py  _stepsize.py
test/bdsim/: 01_drift.gdml  01_drift.gmad  02_rbend.gdml  03_sbend.gdml
test/bdsim/geometry/: 02_rbend.gmad  03_sbend.gmad  04_quad.gdml  04_quad.gmad
test/fluka/: 01_Box.inp  02_PLA_XYZ.inp  03_PLA.inp
test/pyflubl/: test_Coordinates.py  test_IPAC_2025.py  test_T001_Drift.py  test_T002_RBend.py  test_T003_SBend.py  test_T004_Quad.py  test_T017_Target.py  test_T018_RCol.py  test_T019_ECol.py  test_T024_Shield.py  test_T025_Dump.py  test_T027_Wirescanner.py  test_T029_Gap.py  test_T035_Element.py  test_T050_Sampler.py  test_T051_Lattice.py  test_T100_Straight.py  test_T110_Ring_RBend.py  test_T111_Ring_SBend.py  test_T204_Beam.py  test_T234_Global.py  test_T270_Source.py  test_T284_Title.py  test_T289_Usrbin.py  test_T292_Usricall.py  test_T302_Userdump.py
test/pyflubl/geometryInput/: test_T035_Custom_FlukaLibrary.flair  test_T035_Custom_FlukaLibrary.inp  test_T035_Custom_Fluka_Gap.flair  test_T035_Custom_Fluka_Gap.inp  test_T035_Custom_Fluka_RBend.flair  test_T035_Custom_Fluka_RBend.inp  test_T035_Custom_Pyg4.gdml  test_T035_Custom_Pyg4.py
test/pyg4/: pyg4_T001_Drift.py
(+20 files in other folders)
